--- a/client/src/assets/style/customs.css
+++ b/client/src/assets/style/customs.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 /*NAVBAR*/
 
 
@@ -6,13 +8,64 @@
     padding-left: 70px;
     padding-right: 70px;
 }
-.r{
-    padding-top: 100px;
+
+.logo-o{
+  position: absolute;
+width: 90px;
+height: 40px;
+top: 9px;
+}
+
+.font-of{
+    font-family: 'Roboto', sans-serif;
+}
+
+.fontc-of{
+  color: #90A0B7;
+}
+
+.bg-of{
+  background-color: #F9FAFB;
+  padding-top: 150px;
+}
+
+.bg-loginregist-of{
+  height: 580px;
+  background-image: url('../img/bg-login-register.svg');
+}
+
+.box-loginregist-of{
+  font-size: 14px;
+}
+
+.fonttitle-lr-of{
+  font-size: 60px;
+  color: #334D6E;
+  /* font-weight: bold; */
+}
+
+.font-lr-of{
+  font-size: 14px;
+  color: #90A0B7;
+  line-height: 16px;
+}
+
+.btn-lr-of{
+  width: 124px;
+  height: 48px;
+  left: 642px;
+  top: 660px;
+
+  background: #109CF1;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.24);
+  border-radius: 5px;
 }
 
 /*
+
+<img src="../assets/img/bg-login-register.svg" class="bg-of">
 .nav-o{
- 
+
     width: 1440px;
     height: 105px;
     left: 0px;
