--- a/client/src/assets/style/customs.css
+++ b/client/src/assets/style/customs.css
@@ -31,7 +31,7 @@ top: 9px;
 }
 
 .bg-loginregist-of{
-  height: 580px;
+  height: 1000px;
   background-image: url('../img/bg-login-register.svg');
 }
 
@@ -133,8 +133,20 @@ height: 1000px;
   color: #90A0B7;
   font-size: 18px;
 }
+
+.fontc-6-of{
+  color: #848A9A;
+}
+
+.fontc-7-of{
+  color: #C24447;
+}
 .font14-of{
   font-size: 14px;
+}
+
+.font18-of{
+  font-size: 18px;
 }
 
 .btns-1-of{
@@ -143,6 +155,20 @@ height: 1000px;
 
 .alert-of{
   height: 70px;
+}
+
+.box-of{
+  box-shadow: 0px 0px 26px rgba(0, 0, 0, 0.06);
+  border-radius: 30px;
+}
+
+.pickantin-of{
+  weight : 100%;
+}
+
+.footer-of{
+  background: #109CF1;
+  height: 55px;
 }
 /*
 
